# group1

./: .clang-format  .gitignore  CMakeLists.txt  GameProject.sln  README.md
dependencies/fmod-cmake-main/: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/fmod-cmake-main/cmake/: fmod_copy_libs.cmake  fmod_find.cmake
dependencies/fmod-cmake-main/example/test/: CMakeLists.txt  fmod_cmake_test.cpp
dependencies/fmod-cmake-main/fmod/: CMakeLists.txt  README.md
scripts/: dimensions.cpp  (+2 more)
src/client/: AudioManager.cpp  CMakeLists.txt  animatedModel.cpp  animatedSubMesh.cpp  animation.cpp  animator.cpp  audioEngine.cpp  audioManager.cpp  bone.cpp  button.cpp  camera.cpp  canvas.cpp  canvasimage.cpp  circus.cpp  client.cpp  compass.cpp  crosshair.cpp  cube.cpp  firefly.cpp  fireflyRenderer.cpp  interactdisplay.cpp  keydisplay.cpp  leftportraitbutton.cpp  main.cpp  menu.cpp  model.cpp  playbutton.cpp  player.cpp  quitbutton.cpp  rightportraitbutton.cpp  scene.cpp  shader.cpp  shadowMap.cpp  swamp.cpp  textobject.cpp  timerdisplay.cpp  uielement.cpp  victoryscreen.cpp
src/client/audioBanks/OutofTune/.cache/: {1a48b6fc-6e23-45d1-ab0f-b6061afffc7a}.pdc  {259960fd-8886-4ec2-8add-55f00137d1af}.pdc  {81e69fa2-b1e5-4789-a055-464725d8d398}.pdc  {84c98269-ffb0-4d50-9497-995572407b0c}.pdc  {863503d9-690f-4488-8aaa-a52599e1fc3b}.pdc  {b31afc95-bfd9-404e-b065-ffeea42ab854}.pdc  {bcdd6238-dea3-48b4-b859-e54176d94452}.pdc  {cc97fffc-6e2c-471d-9e7e-dde46f7c3afa}.pdc  {d0653107-e870-4124-b7f7-22eac0dfe973}.pdc  {dc0f0153-120e-4d3b-aa2c-69c39d87bf9b}.pdc  {f730e523-7922-42d8-9309-46e16dbbaeea}.pdc
src/client/audioBanks/OutofTune/.unsaved/: metadataFileMapping.data
src/client/audioBanks/OutofTune/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
src/client/audioBanks/OutofTune/Metadata/Asset/: {897da1ba-febd-4b80-8e98-8d40fd0aa078}.xml
src/client/audioBanks/OutofTune/Metadata/AudioFile/: {00ec5431-59bb-4fb2-91d9-e40f3a522f27}.xml  {10daafb6-44b9-4344-8a91-c022382e3c9a}.xml  {112a6003-b715-4917-8d5b-176f410b1291}.xml  {1460dbb8-c2ce-49aa-a2be-d56578b3a4e3}.xml  {18a289f5-466b-4af3-986e-e8d90cd64ae1}.xml  {1a48b6fc-6e23-45d1-ab0f-b6061afffc7a}.xml  {1c6dd183-7a6a-418a-86bb-7230941a68de}.xml  {2134ee5f-1c03-4109-88a6-a9918cc1c2dc}.xml  {2567e5cc-b49c-4ce5-9e14-b6aa223c026d}.xml  {259960fd-8886-4ec2-8add-55f00137d1af}.xml  {2766ebac-c003-43ff-85dc-a4d4ad66832a}.xml  {34ec16c0-023a-4f81-a3ce-d905bafc1025}.xml  {3da974dc-c0ee-4adf-8554-e95b7945b9dd}.xml  {43d8ef33-0c5b-48d5-b4cf-720e9f731088}.xml  {4c522c32-7d7b-4b3e-84e9-a7500f3a80c1}.xml  {55383e56-6793-49f6-a3f4-e98e73b5db5e}.xml  {5aff3703-3388-4100-b1b5-76e119ad1419}.xml  {5f193af5-d046-4fab-a0b4-6cf50151e81c}.xml  {610fdc44-793e-4eeb-960d-7bc9feba7724}.xml  {66d43613-df64-48a1-88ef-b9ec817f2b68}.xml  {68db0e92-d3d6-42c3-a1f1-357f4715a35e}.xml  {6af8cd75-0a22-4c77-93dd-9e08a03ba6bb}.xml  {6fa7b788-25ee-4b60-89ec-c0821f9d28b6}.xml  {7af64ad4-a7ed-4d4b-8004-a7ce12bffa0a}.xml  {7bbbc35c-9925-4eb3-b9fa-d4b8a7537a97}.xml  {81e69fa2-b1e5-4789-a055-464725d8d398}.xml  {84c98269-ffb0-4d50-9497-995572407b0c}.xml  {853e6020-110c-4b32-8004-346d51444fdd}.xml  {863503d9-690f-4488-8aaa-a52599e1fc3b}.xml  {864fbb57-927f-4e59-a071-f2b290d6f27f}.xml  {88095275-6b51-43e5-ad6a-617942978f63}.xml  {891a13b0-4ed9-44c8-8bb0-fd20a9195394}.xml  {9eff4d75-dd93-4f84-a5cd-9c2450f7c978}.xml  {a902f6f2-6942-46c0-99d6-8443740fe949}.xml  {b1ca760e-9c86-4bfc-84d0-c07d8b85ac19}.xml  {b31afc95-bfd9-404e-b065-ffeea42ab854}.xml  {b4f8819d-6508-4844-8e2a-5f1382f6ab3a}.xml  {bcdd6238-dea3-48b4-b859-e54176d94452}.xml  {c4cc8881-cf6b-4314-bb4e-03f41c35ff0d}.xml  {cc97fffc-6e2c-471d-9e7e-dde46f7c3afa}.xml  (+7 more)
src/client/audioBanks/OutofTune/Metadata/Bank/: {24b115a7-2d52-4be2-a256-1973757f5585}.xml  {4f1d2c65-17ff-413a-968b-2014b06ce708}.xml  {5096bb74-8e50-4ee5-bc26-77c843fab4fb}.xml  {6353922f-b58f-48b3-9756-3d2991645edf}.xml
src/client/audioBanks/OutofTune/Metadata/BankFolder/: {e35e35ab-3af3-4072-aa40-5d193ece512a}.xml
src/client/audioBanks/OutofTune/Metadata/EffectPresetFolder/: {83646ef7-6b36-4f3e-8320-ba27438c6656}.xml
src/client/audioBanks/OutofTune/Metadata/EncodingSetting/: {03a7e6ba-a051-48bd-8965-c26a00fdd689}.xml
src/client/audioBanks/OutofTune/Metadata/Event/: {00396995-e033-4760-939d-4c59492538cd}.xml  {008e7455-ae30-40ce-a197-5e85b67035b8}.xml  {09d5c356-2aa5-4360-ba75-787493132e19}.xml  {1f460589-3038-482d-b338-4f6bc0a35634}.xml  {25c216fb-36d9-42c9-bd0f-4662b826ff2a}.xml  {28d69961-ddd2-4bcb-85e3-a6e77a7fd690}.xml  (+37 more)
src/client/characters/: bunny_idle.fbx  bunny_run.fbx  cat_idle.fbx  cat_run.fbx  dog_idle.fbx  dog_run.fbx  frog_idle.fbx  frog_run.fbx  player_cat.fbx  player_character_idle.fbx
src/client/components/: door.cpp  finalDoor.cpp  interactable.cpp  object.cpp  room.cpp
src/client/models/: 1x1_hotel_room.mtl  1x1_hotel_room_bend.mtl  A_key.mtl  bell.mtl  blue_button.mtl  book.mtl  book2.mtl  book3.mtl  button_backplate.mtl  cannon.mtl  cannonball.mtl  cattails.mtl  dolley.mtl  door.mtl  dresser.mtl  final_door.mtl  froggie.mtl  green_button.mtl  hotel_door.mtl  key.mtl  lamp_small.mtl  left_door.mtl  lilypad.mtl  lobby.mtl  long_table.mtl  luggage.mtl  luggage2.mtl  luggage3.mtl  piano_lid.mtl  piano_room.mtl  pink_button.mtl  plant.mtl  player_character.mtl  right_door.mtl  sofa.mtl  swamp_room.mtl  table.mtl  tent.mtl  warren_bear_credits.mtl  wide_table.mtl  (+1 more)
src/client/shaders/: basic.frag  basic.vert  character.frag  character.vert  firefly.frag  firefly.vert  model.frag  model.vert  shadow.frag  shadow.geom  shadow.vert  swamp.frag  ui.frag  ui.vert
src/server/: CMakeLists.txt  circus.cpp  collisionDetection.cpp  collisionSolver.cpp  initBody.cpp  lilypad.cpp  lobby.cpp  main.cpp  piano.cpp  player.cpp  rigidBody.cpp  server.cpp  swamp.cpp  world.cpp
src/server/components/: cannonball.cpp  circusRespawn.cpp  door.cpp  finalButton.cpp  finalDoor.cpp  frog.cpp  interactable.cpp  key.cpp  lilypad.cpp  object.cpp  pianoKey.cpp  pianoRespawn.cpp  room.cpp  splash.cpp  water.cpp
src/server/data/: dimensions.json  layout.json
(+149 files in other folders)
